// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi-block selection should allow selecting outer edge if there is no sibling block 1`] = `
"<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should always expand single line selection 1`] = `""`;

exports[`Multi-block selection should clear selection when clicking next to blocks 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should copy and paste 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should copy and paste 2`] = `""`;

exports[`Multi-block selection should copy and paste 3`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should copy multiple blocks 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should cut and paste 1`] = `""`;

exports[`Multi-block selection should cut and paste 2`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should gradually multi-select 1`] = `
"<!-- wp:columns -->
<div class=\\"wp-block-columns\\"><!-- wp:column {\\"width\\":\\"33.33%\\"} -->
<div class=\\"wp-block-column\\" style=\\"flex-basis:33.33%\\"></div>
<!-- /wp:column -->

<!-- wp:column {\\"width\\":\\"66.66%\\"} -->
<div class=\\"wp-block-column\\" style=\\"flex-basis:66.66%\\"></div>
<!-- /wp:column --></div>
<!-- /wp:columns -->

<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should gradually multi-select 2`] = `
"<!-- wp:columns -->
<div class=\\"wp-block-columns\\"></div>
<!-- /wp:columns -->"
`;

exports[`Multi-block selection should multi-select from within the list block 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:list -->
<ul><li>1</li></ul>
<!-- /wp:list -->"
`;

exports[`Multi-block selection should not multi select single block 1`] = `
"<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should only trigger multi-selection when at the end 1`] = `
"<!-- wp:paragraph -->
<p>4.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should place the caret at the end of last pasted paragraph (paste mid-block) 1`] = `
"<!-- wp:paragraph -->
<p>first paragra</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>first paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>second paragrap</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>ph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>second paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should place the caret at the end of last pasted paragraph (paste to empty editor) 1`] = `
"<!-- wp:paragraph -->
<p>first paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>second paragrap</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should place the caret at the end of last pasted paragraph (replace) 1`] = `
"<!-- wp:paragraph -->
<p>first paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>second paragrap</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should preserve dragged selection on move 1`] = `
"<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>3</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should return original focus after failed multi selection attempt 1`] = `
"<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should select all from empty selection 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should select all from empty selection 2`] = `""`;

exports[`Multi-block selection should set attributes for multiple paragraphs 1`] = `
"<!-- wp:paragraph {\\"align\\":\\"center\\"} -->
<p class=\\"has-text-align-center\\">1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph {\\"align\\":\\"center\\"} -->
<p class=\\"has-text-align-center\\">2</p>
<!-- /wp:paragraph -->"
`;

exports[`Multi-block selection should use selection direction to determine vertical edge 1`] = `
"<!-- wp:paragraph -->
<p>1<br>2.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>3</p>
<!-- /wp:paragraph -->"
`;
